--- a/example-config.json
+++ b/example-config.json
@@ -1,4 +1,6 @@
 {
     "port": 3000,
-    "appName": "Blog NodeJS"
+    "appName": "Blog NodeJS",
+    "MongoDB": "mongodb://localhost/example",
+    "sessionSecret": "any hash here"
 }
