--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "node app"
   },
   "author": {
-		"name": "zMatheusPro",
-		"email": "zm4theuspro@gmail.com",
-		"url": "https://zmatheuspro.info/"
-	},
+    "name": "zMatheusPro",
+    "email": "zm4theuspro@gmail.com",
+    "url": "https://zmatheuspro.info/"
+  },
   "repository": "zMatheusPro/Blog-In-NodeJS",
   "license": "GPL-3.0",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.11.15"
   }
 }
